@@ -5,7 +5,7 @@ Plugin URI: http://www.wprssaggregator.com
 Tags: rss, feeds, aggregation, aggregator, import, feed aggregator, rss aggregator, multiple rss feeds, multi rss feeds, multi rss, rss import, feed import, feed import, multiple feed import, feed aggregation, rss feader, feed reader, feed to post, multiple feeds, multi feed importer, multi feed import, multi import, autoblog, autoblogging, autoblogger
 Requires at least: 3.3
 Tested up to: 3.7.1
-Stable tag: 3.5.1
+Stable tag: 3.5.2
 License: GPLv2 or later
 Imports and aggregates multiple RSS Feeds using SimplePie. Outputs feeds sorted by date (latest first).
 
@@ -143,6 +143,11 @@ Yes, within the [Feed to Post](http://www.wprssaggregator.com/extensions/feed-to
 
 
 == Changelog ==
+
+= 3.5.2 (2013-11-11) =
+* Fixed bug: Invalid feed source url was producing an Undefined method notice.
+* Fixed bug: Custom feed was producing a 404 page.
+* Fixed bug: Presstrends code firing on admin_init, opt-in implementation coming soon
 
 = 3.5.1 (2013-11-09) =
 * Enhanced: Increased compatibility with RSS sources.
