@@ -1,6 +1,7 @@
 3.5.2
 Fixed bug: Invalid feed source url was producing an Undefined method notice.
 Fixed bug: Custom feed was producing a 404 page.
+Fixed bug: Presstrends code firing on admin_init, opt-in implementation coming soon
 
 3.5.1 (2013-11-09)
 Enhanced: Increased compatibility with RSS sources.
